--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Documentation UniWIP CDR 2025
+title: UniWIP CDR 2025
 description: Documentation de l'équipe UniWIP pour la CDR 2025
 theme: just-the-docs
 
-url: https://unimakers.github.io/uniwip-cdr2025-docs
+url: https://unimakers.fr/UniWip-Docs-CDR2025/
 
 aux_links:
   Les Dépots de la team UniWIP: https://github.com/orgs/Unimakers/teams/uniwip/repositories
