feat: unimakers theme and elec kicanvas

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: UniWIP CDR 2025
 description: Documentation de l'équipe UniWIP pour la CDR 2025
 theme: just-the-docs
+color_scheme: unimakers
 
 url: https://unimakers.fr/UniWip-Docs-CDR2025/
 
